--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 <title>first page</title>
 <style type="text/css">
-body{
+.body{
 background-img:url('img.jpg');
-background-size:cover;
+  background-size:cover;}
 .center-div{
 
 background-color:green;
