--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>first page</title>
 <style type="text/css">
 .body{
-background-img:url('img.jpg');
+background-img:url('pic.jpg');
   background-size:cover;}
 .center-div{
 
